# axum-demo

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  RUST.md  clippy.toml  compose.env  deny.toml  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml  test.yaml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/worflows/: audit.yaml  build.yaml
.github/workflows/: audit-workflow.yaml  audit.yaml  build.txt  build.yaml  develop-workflow.yaml  feature-workflow.yaml  main-workflow.yaml  release-workflow.yaml  test-lint-workflow.yaml
config/: prometheus.yml
config/grafana/dashboards/: dashboards.yaml  k6-prometheus-native-histogram.json
config/grafana/provisioning/datasources/: automatic.yml
config/prometheus/: prometheus.yml
examples/: quick_dev.rs
external-services/kubernetes/app/clusterroles/: secret-reader.yaml
external-services/kubernetes/app/configmaps/: axum-demo.yaml
external-services/kubernetes/app/deployments/: axum-demo.yaml  jaeger.yaml
external-services/kubernetes/app/ingresses/: main.yaml
external-services/kubernetes/app/limits/: development.yaml
external-services/kubernetes/app/namespaces/: dev.yaml  development.yaml
external-services/kubernetes/app/opentelemetrycollectors/: basic-daemonset.yaml  basic-sidecar.yaml
external-services/kubernetes/app/quota/: development.yaml
external-services/kubernetes/app/rbac/: github-ci.yaml  otel-dev.yaml
external-services/kubernetes/app/rolebindings/: read-pods.yaml
external-services/kubernetes/app/secrets/: axum-demo.yaml
external-services/kubernetes/app/servicemonitor/: axum-demo.yaml
external-services/kubernetes/app/services/: axum-demo.yaml  jaeger.yaml  postgres.yaml
external-services/kubernetes/helm/kube-prometheus-stack/: values.yaml
external-services/kubernetes/helm/opentelemetry-operator/: values.yaml
external-services/kubernetes/helm/prometheus-postgres-exporter/: values.yaml
external-services/otel/: otel-collector-config.yaml
infrastructure/cloud-run/: run-service.yaml
infrastructure/cloud-run/otel-collector/: Dockerfile  collector-config.yaml
infrastructure/cloud-run/terraform/: main.tf  output.tf  terraform.tfvars  variables.tf
infrastructure/docker-compose/grafana/dashboards/: k6-prometheus.json
infrastructure/docker-compose/grafana/datasources/: automatic.yml
infrastructure/docker-compose/haproxy/: haproxy.cfg
infrastructure/docker-compose/k6/: script.js
infrastructure/docker-compose/otel/: otel-collector-config.yaml  otel-collector-grafana-sample.yaml  otel-collector.yaml
infrastructure/docker-compose/postgres/: init.sql
infrastructure/docker-compose/prometheus/: prometheus.yml
infrastructure/kubernetes/app/configmaps/: axum-demo.yaml
infrastructure/kubernetes/app/deployments/: axum-demo.yaml
infrastructure/kubernetes/app/opentelemetrycollectors/: basic-daemonset.yaml
infrastructure/kubernetes/app/quota/: development.yaml
infrastructure/kubernetes/app/rbac/: github-ci.yaml  otel-dev.yaml
infrastructure/kubernetes/app/services/: jaeger.yaml
infrastructure/kubernetes/app/statefulsets/: postgres.yaml
infrastructure/vm/gcp/terraform/: .terraform.lock.hcl  init.sh  main.tf  outuput.tf  variables.tf  versions.tf
infrastructure/vm/hetzner/: nftables.conf
infrastructure/vm/hetzner/terraform/: .terraform.lock.hcl  init.sh  main.tf  outuput.tf  variables.tf
k6/: index.js  script.js
kubernetes/: main.yaml
kubernetes/app/configmaps/: axum-demo.yaml
kubernetes/app/deployments/: axum-demo.yaml  grafana.yaml  jaeger.yaml  prometheus.yaml
kubernetes/app/ds/: prometheus.yaml
kubernetes/app/ingresses/: main.yaml
kubernetes/app/rolebindings/: read-pods.yaml
kubernetes/app/roles/: pod-reader.yaml
kubernetes/app/secrets/: axum-demo.yaml
kubernetes/app/serviceaccount.yaml/: github-ci.yaml
kubernetes/app/services/: axum-demo.yaml  jaeger.yaml  postgres.yaml
kubernetes/app/statefulsets/: postgres.yaml  values.yaml
kubernetes/helm/kube-prometheus-stack/: values.yaml
migrations/: 20230928133729_create-schema.sql  20230928133737_dev-seed.sql  20231020210039_create-schema.sql
scripts/: init_db.sh
sql/dev_initial/: 00-recreate-db.sql  01-create-scheama.sql  02-dev-seed.sql
src/: config.rs  error.rs  lib.rs  log.rs  main.rs  model.rs  startup.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/crypt/utils/: error.rs  mod.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/observability/: metrics.rs  mod.rs  traces.rs  tracing.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  mw_validate_json.rs  routes_docs.rs  routes_hello.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rest/: mod.rs  routes_health.rs  routes_hello.rs  routes_login.rs  routes_prometheus.rs  routes_static.rs
src/web/rpc/: mod.rs  task_rpc.rs
static/: index.html
tests/: gen_key.rs  helpers.rs  quick_dev.rs
tests/api/: account.rs  health_check.rs  helpers.rs  main.rs
